<resources>
    <string name="app_name">Assign3</string>
    <string name="name">Name: Sahil Lapsiwala</string>
    <string name="btn1">ADD TEAM</string>
    <string name="btn2">EXIT</string>
    <string name="btn_del">DELETE</string>
    <string name="btn_update">UPDATE</string>
    <string name="exit">EXIT</string>
    <string name="submit">SUBMIT</string>
    <string name="name_1">Name</string>
    <string name="city">City</string>
    <string name="mvp">MVP</string>
    <string name="sport">Sport</string>
    <string name="stadium">Stadium</string>
</resources>
