<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#00ff00">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:background="@android:color/holo_purple"
            android:text="@string/name"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn1"
                android:textSize="30.0sp"
                style="?android:buttonBarButtonStyle"
                android:textColor="#ff000000" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn2"
                style="?android:buttonBarButtonStyle"
                android:textSize="30.0sp"
                android:textColor="#ff000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>